@@ -2067,3 +2067,4 @@
 * pheno:   added instagib damage (bitflag 2) to headshot mode. g_headshot is
            now a bitmask cvar.
 * pheno:   added goomba flag 32 - falling corpses won't cause damage
+* pheno:   added g_shrubbotOptions bitflag cvar (see docs)
